Switch to distroless java11 base image. (#199)